gitops/platform-apps/n8n/authentik-callback-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-authentik-callback
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-authentik-callback-netbird
  namespace: n8n
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`n8n.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
