gitops/platform-apps/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: n8n
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-wiredoor
  namespace: n8n
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`n8n.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: n8n
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-tailscale
  namespace: n8n
spec:
  entryPoints:
    - webtailscale
  routes:
    - kind: Rule
      match: Host(`n8n.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: n8n
          port: 80
  tls: {}
